index html modified

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 /**************************************variables**********************/
+/**************************************variables**********************/
 /***************************************mixins************************/
 /*******************************keyframes**************************/
 @keyframes loader {
