--- a/omf.scss
+++ b/omf.scss
@@ -1,9 +1,6 @@
 
 /**************************************variables**********************/
-$color-primary: #9356DC;
-$color-secondary: #FF79DA;
-$color-tertiary: #99E2D0;
-$color-background: #F6F6F6;
+@import 'variables.scss';
 /****************************mixin*************************/
 @mixin flex-center {
     display: flex;
