--- a/omf.scss
+++ b/omf.scss
@@ -1,55 +1,10 @@
-
 /**************************************variables**********************/
+
 @import 'variables.scss';
+
 /****************************mixin*************************/
-@mixin flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-@mixin bx-shadow {
-    box-shadow: 1px 1px 12px 2px rgba(0,0,0,0.34);
-}
-
-@mixin gradient($opacity) {
-    background-image: linear-gradient(to top,rgba($color-primary,$opacity), rgba($color-secondary,$opacity));
-    
-}
-
-@mixin button{
-    color: white;
-    border: none;
-    border-radius:30px;
-    font-weight: 500;
-    font-size: 16px;
-    padding: 15px 20px;
-    margin: auto;
-    transition: transform 200ms;
-    cursor: pointer;
-}
-
-@mixin heart ($opacity:1,$font-weight:400, $color: inherit) {
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing:antialiased;
-    font-family: "font awesome 5 free";
-    font-weight: $font-weight;
-    content: "\f004";
-    font-size: 30px;
-    position: absolute;
-    right: 20px;
-    bottom: 20%;
-    transform: translateY(-50%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: $color;
-    opacity: $opacity;
-    transition: all 200ms ease-in-out;
-
-}
+@import "mixins.scss";
 
 /*******************************keyframes*******************/
 @mixin anim_price {
@@ -167,9 +122,10 @@ body {
     flex-direction: row;
     gap: 0.5rem;
 
-    h3{
+    h2{
         border-bottom: medium solid #99E2D0;
         max-width: 46px;
+        font-size: 20px;
     }
   
     .card{
@@ -203,7 +159,7 @@ body {
             white-space: nowrap;
 
         }
-        h4{
+        h3{
             font-weight: normal;
             margin: 0;
             text-overflow: ellipsis;
@@ -273,7 +229,7 @@ footer{
     flex-direction: column;
     margin-top: 30px;
     
-    h3{
+    h1{
         font-family: 'Shrikhand', sans-serif;
         font-weight:unset;
         font-size: 22px;
@@ -339,7 +295,7 @@ footer{
             color: white;
         }
     
-        h3{
+        h2{
             font-family: 'Shrikhand', sans-serif;
             font-weight:unset;
             font-size: 22px;
