a_la_francaise html modified

--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 /**************************************variables**********************/
+/**************************************variables**********************/
 /***************************************mixins************************/
+/****************************mixin*************************/
 /*******************************keyframes**************************/
 @keyframes loader {
   0% {
@@ -51,7 +53,7 @@ a {
   color: inherit;
 }
 
-h3, p {
+h1, p {
   margin: 0;
 }
 
@@ -147,7 +149,7 @@ header img {
   text-align: center;
   padding-bottom: 60px;
 }
-.text_accueil h3 {
+.text_accueil h1 {
   font-size: 30px;
   margin-top: 0;
   margin-bottom: 20px;
@@ -163,7 +165,7 @@ header img {
   border-radius: 30px;
   font-weight: 500;
   font-size: 16px;
-  padding: 15px;
+  padding: 15px 20px;
   margin: auto;
   transition: transform 200ms;
   cursor: pointer;
@@ -334,7 +336,7 @@ footer {
   flex-direction: column;
   margin-top: 30px;
 }
-footer h3 {
+footer h1 {
   font-family: "Shrikhand", sans-serif;
   font-weight: unset;
   font-size: 22px;
@@ -409,7 +411,7 @@ footer i {
     text-align: justify;
     padding: 20px;
   }
-  footer h3 {
+  footer h1 {
     font-family: "Shrikhand", sans-serif;
     font-weight: unset;
     font-size: 22px;
